Refactor retreive image on cart page